# Flask-authgen-jwt

./: .gitignore  LICENSE  README.md  SECURITY.md  requirements.txt  setup.cfg
.github/config/: .pylintrc
.github/scripts/: validate_release.py
.github/workflows/: pylint.yml  python-publish.yml  release.yml  tox-retro.yml  unit-tests.yml  validate_release.yml
api_example/app/: routes.py
api_example/rsa_with_passwd/: run_app.py
api_example/rsa_with_passwd/app/: __init__.py  routes.py
api_example/rsa_without_passwd/app/: __init__.py  routes.py
api_example/without_rsa/app/: __init__.py  routes.py
src/: flask_authgen_jwt.py
tests/: library_test.py
