[metadata]
name = Flask-authgen-jwt
version = 4.1.2
author = Diego Martinez
license = MIT
author_email = gd-code@outlook.com
description = JWT authentication and generator for Flask routes
long_description = file: README.md
long_description_content_type = text/markdown
requires-python = ">=3.9"
license_files = LICENSE
url = https://github.com/dmtzs/Flask-authgen-jwt
project_urls =
    Bug Tracker = https://github.com/dmtzs/Flask-authgen-jwt/issues
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: MicroPython
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
install_requires =
    Flask
    PyJWT
package_dir =
    = src
py_modules =
    flask_authgen_jwt